[package]
name = "cloudflare_ddns"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
config = { version = "0.15", features = ["json"] }
serde_json = "1.0"
env_logger = "0.11"
chrono = "0.4"
